testdata/golden/hir_borrow/invalid/spawn_escape.sg
async fn use_ref(x: &int) {}

async fn t() {
    let mut x: int = 1;
    let r: &int = &x;
    let t = task use_ref(r);
    t.await();
}
